Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-14550

Signal can't have QML types as parameters

    XMLWordPrintable

Details

    • 92562eacbc3c614a83a734f1108ed7df02415eae

    Description

      The documentation for adding new signals to QML says:

      The options for parameter types are the same as for property types (see Adding new properties.

      (at http://doc.qt.nokia.com/4.7/qml-extending-types.html#adding-new-signals)

      and following the link, we see that there property can have one of the basic types, or have a type of a QML component (and also QtObject). However the following example doesn't load:

      ---8<--
      import QtQuick 1.0

      Item {
      signal testSignal(int number)
      signal testSignal2(QtObject obj)
      }
      ---->8---

      Is that an expected limitation of QML?

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            chriadam Christopher Adams (closed Nokia identity) (Inactive)
            cmarcelo Caio Marcelo de Oliveira Filho
            Votes:
            3 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes