Allow signal parameters which are custom QML object-types

This commit allows lazy resolution of signal parameter types, which
allows QML object types to be used as signal parameters.  If a signal
is emitted with an incorrect parameter type, it will be passed through
as a null parameter.

Task-number: QTBUG-14550
Change-Id: I7e899ad57452826cc405bed10c541f8d35789d04
Reviewed-by: Martin Jones <martin.jones@nokia.com>